<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_dashboard"/>

        <item
            android:id="@+id/myprofile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_favourite"
            />

        <item
            android:id="@+id/favourites"
            android:title="@string/favourite_restaurants"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/faqs"
            android:title="FAQs"
            android:icon="@drawable/ic_about"/>

        <item
            android:id="@+id/logout"
            android:title="Logout"
            android:icon="@drawable/ic_about"/>



    </group>


</menu>