<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:background="#ff8f32">

    <ImageView
        android:id="@+id/logo_forgetpswrd"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_white_one"/>

    <TextView
        android:id="@+id/txt_enter_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_forgetpswrd"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/adamina"
        android:padding="15sp"
        android:textColor="@android:color/white"/>


    <EditText
        android:id="@+id/et_email_forgetp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_enter_mail"
        android:hint="@string/email"
        android:elevation="6dp"
        android:maxLines="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:textColorHint="#7F000000"
        android:fontFamily="@font/adamina"
        android:inputType="textEmailAddress"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="13dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/et_mob_forgetp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_forgetp"
        android:hint="@string/mobile_number_10_digits"
        android:elevation="6dp"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:textColorHint="#7F000000"
        android:fontFamily="@font/adamina"
        android:inputType="number"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <Button
        android:id="@+id/btn_next_forgetp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@android:color/white"
        android:layout_below="@id/et_mob_forgetp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:elevation="10dp"
        android:focusableInTouchMode="true"/>



</RelativeLayout>