<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical"
    android:background="#ff8f32">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatelayout"
        android:layout_width="match_parent"
        android:layout_height="53dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:elevation="0dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DC6400"
                app:titleTextColor="@android:color/black"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ToolbarTheme" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <EditText
        android:id="@+id/et_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_register"
        android:hint="@string/name_min_3_characters"
        android:elevation="6dp"
        android:maxLines="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="#7F000000"
        android:fontFamily="@font/adamina"
        android:inputType="textCapWords"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name_register"
        android:hint="@string/email"
        android:elevation="6dp"
        android:maxLines="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:textColorHint="#7F000000"
        android:fontFamily="@font/adamina"
        android:inputType="textEmailAddress"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="13dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/et_mob_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_register"
        android:hint="@string/mobile_number_10_digits"
        android:elevation="6dp"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:textColorHint="#7F000000"
        android:fontFamily="@font/adamina"
        android:inputType="number"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/et_delivery_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mob_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/adamina"
        android:hint="@string/delivery"
        android:maxLines="2"
        android:inputType="text"
        android:elevation="6dp"
        android:textColorHint="#7F000000"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/et_pass_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mob_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/adamina"
        android:hint="@string/password_min_4_characters"
        android:maxLines="1"
        android:inputType="textPassword"
        android:elevation="6dp"
        android:textColorHint="#7F000000"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/et_Confirmpass_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mob_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/adamina"
        android:hint="@string/confirm_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:elevation="6dp"
        android:textColorHint="#7F000000"
        android:textSize="15dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_outline"/>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#DC6400"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="@font/adamina"
        android:textStyle="bold"/>

</LinearLayout>